# foodery

./: .env  .gitignore  README.md  config.py  import_ingredients.py  main.py  products.db  pyproject.toml
.old/: food.py
alembic/: env.py
alembic/versions/: 0033e34f280a_sqlmodel_schema.py  bd4eaf50b31b_initial_tables.py
app/: food.py  product_scan.py  scan.py  scraper.py
app/core/: config.py  log.py  security.py
app/crud/: products.py  recipes.py  units.py  user.py
app/data/: crud.py  db.py  models.py  schemas.py
app/db/: db.py  mealie_units.py  models.py  seed.py
app/log/: log.py
app/products/: product_scan.py  routes.py
app/recipes/: crud.py  recipe_scrape.py  routes.py
app/routers/: main.py  products.py  recipes.py
app/templates/: scan.html
assets/data/products/: tandoor_foods.py
assets/data/units/: measure_units.py
assets/static/css/: base.css
assets/static/js/: product-scan.js  products.js  recipe-add.js  recipe-details.js  recipe-form.js  recipe-scrape.js  recipes.js
assets/templates/: base.html  cookbook.html  inventory.html  product-scan.html  products.html  recipe-add.html  recipe-details.html  recipes.html  scan.html  scan2.html  squirrelf_example.html
assets/templates/alt/: recipe-scrape.html  scan2.html
core/: log.py
data/: crud.py  db.py  models.py  schemas.py
docs/: README.md  ingredients.md  recipes.md  scraper.md
