[project]
name = "food"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.119.1",
    "opencv-python>=4.12.0.88",
    "openfoodfacts>=3.1.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pyzbar>=0.1.9",
    "recipe-scrapers>=15.9.0",
    "sqlalchemy>=2.0.44",
]
